--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,15 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ],
-    "rewrites": [
+    "rewrites": [{
+        "source": "/postresult/**",
+        "function": "postresult"
+      },
       {
         "source": "**",
         "destination": "/index.html"
